more per page sizes by default added default parging page size to be 10 don't use old button3 and fixed select column css and multirow close btn to work well with bs3

--- a/app/views/ajax_data_grid/_no_filter_results.html.haml
+++ b/app/views/ajax_data_grid/_no_filter_results.html.haml
@@ -1,4 +1,4 @@
 %div.no.filter-results
   %div.message=builder.table_options[:empty_filter]
   %div.buttonsBar
-    =link_to(builder.config.translate('no_rows_filter.clear_filter'), 'javascript:;', :class => 'button3 grey clearFilter')
+    =link_to(builder.config.translate('no_rows_filter.clear_filter'), 'javascript:;', :class => 'btn btn-large btn-lg clearFilter')
